// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Resizable Components > Snapshots > should match snapshot for basic horizontal layout > resizable-horizontal 1`] = `
<div>
  <div
    class="flex h-full w-full data-[panel-group-direction=vertical]:flex-col"
    data-panel-group=""
    data-panel-group-direction="horizontal"
    data-panel-group-id=":r3r:"
    data-slot="resizable-panel-group"
    style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
  >
    <div
      class=""
      data-panel=""
      data-panel-group-id=":r3r:"
      data-panel-id=":r3s:"
      data-panel-size="1.0"
      data-slot="resizable-panel"
      style="flex-basis: 0px; flex-grow: 1; flex-shrink: 1; overflow: hidden;"
    >
      Left
    </div>
    <div
      class="bg-border focus-visible:ring-ring relative flex w-px items-center justify-center after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-offset-1 focus-visible:outline-hidden data-[panel-group-direction=vertical]:h-px data-[panel-group-direction=vertical]:w-full data-[panel-group-direction=vertical]:after:left-0 data-[panel-group-direction=vertical]:after:h-1 data-[panel-group-direction=vertical]:after:w-full data-[panel-group-direction=vertical]:after:-translate-y-1/2 data-[panel-group-direction=vertical]:after:translate-x-0 [&[data-panel-group-direction=vertical]>div]:rotate-90"
      data-panel-group-direction="horizontal"
      data-panel-group-id=":r3r:"
      data-panel-resize-handle-enabled="true"
      data-panel-resize-handle-id=":r3t:"
      data-resize-handle=""
      data-resize-handle-state="inactive"
      data-slot="resizable-handle"
      role="separator"
      style="user-select: none;"
      tabindex="0"
    />
    <div
      class=""
      data-panel=""
      data-panel-group-id=":r3r:"
      data-panel-id=":r3u:"
      data-panel-size="1.0"
      data-slot="resizable-panel"
      style="flex-basis: 0px; flex-grow: 1; flex-shrink: 1; overflow: hidden;"
    >
      Right
    </div>
  </div>
</div>
`;

exports[`Resizable Components > Snapshots > should match snapshot for vertical layout > resizable-vertical 1`] = `
<div>
  <div
    class="flex h-full w-full data-[panel-group-direction=vertical]:flex-col"
    data-panel-group=""
    data-panel-group-direction="vertical"
    data-panel-group-id=":r3v:"
    data-slot="resizable-panel-group"
    style="display: flex; flex-direction: column; height: 100%; overflow: hidden; width: 100%;"
  >
    <div
      class=""
      data-panel=""
      data-panel-group-id=":r3v:"
      data-panel-id=":r40:"
      data-panel-size="1.0"
      data-slot="resizable-panel"
      style="flex-basis: 0px; flex-grow: 1; flex-shrink: 1; overflow: hidden;"
    >
      Top
    </div>
    <div
      class="bg-border focus-visible:ring-ring relative flex w-px items-center justify-center after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-offset-1 focus-visible:outline-hidden data-[panel-group-direction=vertical]:h-px data-[panel-group-direction=vertical]:w-full data-[panel-group-direction=vertical]:after:left-0 data-[panel-group-direction=vertical]:after:h-1 data-[panel-group-direction=vertical]:after:w-full data-[panel-group-direction=vertical]:after:-translate-y-1/2 data-[panel-group-direction=vertical]:after:translate-x-0 [&[data-panel-group-direction=vertical]>div]:rotate-90"
      data-panel-group-direction="vertical"
      data-panel-group-id=":r3v:"
      data-panel-resize-handle-enabled="true"
      data-panel-resize-handle-id=":r41:"
      data-resize-handle=""
      data-resize-handle-state="inactive"
      data-slot="resizable-handle"
      role="separator"
      style="user-select: none;"
      tabindex="0"
    />
    <div
      class=""
      data-panel=""
      data-panel-group-id=":r3v:"
      data-panel-id=":r42:"
      data-panel-size="1.0"
      data-slot="resizable-panel"
      style="flex-basis: 0px; flex-grow: 1; flex-shrink: 1; overflow: hidden;"
    >
      Bottom
    </div>
  </div>
</div>
`;

exports[`Resizable Components > Snapshots > should match snapshot with grip handle > resizable-with-grip 1`] = `
<div>
  <div
    class="flex h-full w-full data-[panel-group-direction=vertical]:flex-col"
    data-panel-group=""
    data-panel-group-direction="horizontal"
    data-panel-group-id=":r43:"
    data-slot="resizable-panel-group"
    style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
  >
    <div
      class=""
      data-panel=""
      data-panel-group-id=":r43:"
      data-panel-id=":r44:"
      data-panel-size="1.0"
      data-slot="resizable-panel"
      style="flex-basis: 0px; flex-grow: 1; flex-shrink: 1; overflow: hidden;"
    >
      Panel
    </div>
    <div
      class="bg-border focus-visible:ring-ring relative flex w-px items-center justify-center after:absolute after:inset-y-0 after:left-1/2 after:w-1 after:-translate-x-1/2 focus-visible:ring-1 focus-visible:ring-offset-1 focus-visible:outline-hidden data-[panel-group-direction=vertical]:h-px data-[panel-group-direction=vertical]:w-full data-[panel-group-direction=vertical]:after:left-0 data-[panel-group-direction=vertical]:after:h-1 data-[panel-group-direction=vertical]:after:w-full data-[panel-group-direction=vertical]:after:-translate-y-1/2 data-[panel-group-direction=vertical]:after:translate-x-0 [&[data-panel-group-direction=vertical]>div]:rotate-90"
      data-panel-group-direction="horizontal"
      data-panel-group-id=":r43:"
      data-panel-resize-handle-enabled="true"
      data-panel-resize-handle-id=":r45:"
      data-resize-handle=""
      data-resize-handle-state="inactive"
      data-slot="resizable-handle"
      role="separator"
      style="user-select: none;"
      tabindex="0"
    >
      <div
        class="bg-border z-10 flex h-4 w-3 items-center justify-center rounded-xs border"
      >
        <svg
          class="lucide lucide-grip-vertical size-2.5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="9"
            cy="12"
            r="1"
          />
          <circle
            cx="9"
            cy="5"
            r="1"
          />
          <circle
            cx="9"
            cy="19"
            r="1"
          />
          <circle
            cx="15"
            cy="12"
            r="1"
          />
          <circle
            cx="15"
            cy="5"
            r="1"
          />
          <circle
            cx="15"
            cy="19"
            r="1"
          />
        </svg>
      </div>
    </div>
    <div
      class=""
      data-panel=""
      data-panel-group-id=":r43:"
      data-panel-id=":r46:"
      data-panel-size="1.0"
      data-slot="resizable-panel"
      style="flex-basis: 0px; flex-grow: 1; flex-shrink: 1; overflow: hidden;"
    >
      Panel 2
    </div>
  </div>
</div>
`;
